sandbox/output
StrategyNormalItem.java:4: error: cannot find symbol
        calculateQualityBeforeDecreasingSellIn();
        ^
  symbol:   method calculateQualityBeforeDecreasingSellIn()
  location: class StrategyNormalItem
StrategyNormalItem.java:5: error: cannot find symbol
        decreaseSellIn();
        ^
  symbol:   method decreaseSellIn()
  location: class StrategyNormalItem
StrategyNormalItem.java:6: error: cannot find symbol
        calculateQualityAfterDecreasingSellIn();
        ^
  symbol:   method calculateQualityAfterDecreasingSellIn()
  location: class StrategyNormalItem
3 errors
